adapters/rest-vertx/src/main/fabric8/hono-adapter-rest-vertx-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  selector:
    name: ${project.artifactId}
  template:
    metadata:
      labels:
        app: hono
        name: ${project.artifactId}
    spec:
      containers:
      - image: eclipsehono/hono-adapter-rest-vertx:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: ${project.artifactId}-volume
          mountPath: /home/hono/file-uploads
      volumes:
      - name: ${project.artifactId}-volume
        persistentVolumeClaim:
          claimName: ${project.artifactId}-pv-claim
