adapters/rest-vertx/src/main/fabric8/hono-adapter-rest-vertx-dc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hono
        name: ${project.artifactId}
    spec:
      containers:
      - image: eclipsehono/hono-adapter-rest-vertx:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        livenessProbe:
          httpGet:
            path: "/status"
            port: 8080
            initialDelaySeconds: 20
