adapters/rest-vertx/src/main/fabric8/hono-adapter-rest-vertx-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    name: ${project.artifactId}
